# ansi-escape-color-filter

./: .gitignore  CMakeLists.txt
aecf/: CMakeLists.txt
aecf/src/: AecfArgumentMap.cpp  AecfArgumentMap.hpp  AecfArguments.cpp  AecfArguments.hpp  AnsiColor.cpp  AnsiColor.hpp  AnsiEscapeState.cpp  AnsiEscapeState.hpp  Chars.cpp  Chars.hpp  Globals.cpp  Globals.hpp  MainArgs.cpp  MainArgs.hpp  Parser.cpp  Parser.hpp  Transmitter.cpp  Transmitter.hpp
aecf/src_aecf/: main.cpp
aecf/src_generated/: AecfArgConfig.cpp  AecfArgConfig.fpp  AecfArgConfig.hpp
aecf/src_generators/arguments/: main.cpp
aecf/src_tests/: TestAnsiColor.cpp  TestAnsiColor.hpp  TestBase.cpp  TestBase.hpp  TestTransmitter.cpp  TestTransmitter.hpp  main.cpp
aecf/src_tools/: FollowedBy.cpp  FollowedBy.hpp  breakpoint.hpp  string.cpp  string.hpp
src/: AnsiColor.hpp  AnsiEscapeState.hpp  Chars.hpp  Globals.hpp  Parser.hpp  Transmitter.hpp  main.cpp
src_tests/: TestAnsiColor.hpp  TestBase.hpp  TestTransmitter.hpp  main.cpp
src_tools/: breakpoint.hpp  string.hpp
tags2/2j36v4onzk/: 2j36v4onzk.txt
tests/: chk_aecf.sh
tests.d/: chk_aecf.sh
